--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Testing GitHub Pivotal Integration",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,6 @@
     "express": "^4.18.2",
     "path": "^0.12.7",
     "pg": "^8.8.0"
-  }
+  },
+  "devDependencies": {}
 }
